# git-purge

./: Cargo.toml  LICENSE  Makefile  README.md  dist-workspace.toml
.github/workflows/: release.yml
docs/: _config.yml  index.md
src/: cli.rs  main.rs  utils.rs
src/utils/: common.rs  git.rs
